Revisão nas descrições
Revisão e alteração nas descrições a fim de melhorar o entendimento do projecto

--- a/ETL-Indice_Demografico_1900_a_2023.ipynb
+++ b/ETL-Indice_Demografico_1900_a_2023.ipynb
@@ -5,7 +5,7 @@
    "id": "6d0f38fa",
    "metadata": {},
    "source": [
-    "## ETL para o arquivo: Indice_Demografico_1900.csv"
+    "## Projeto de ETL (Extract, Transform, Load)"
    ]
   },
   {
@@ -13,7 +13,9 @@
    "id": "aa8acfb7",
    "metadata": {},
    "source": [
-    "#### Neste Projeto será feito o ETL para tratamento dos dados do dataset 'Indice_Demografico_1900.csv', essas etapas são fundamentais para garantir qualidade, confiabilidade e utilidade do dataset para análises, visualizações e possíveis modelos preditivos. Os dados são públicos e foram adquiridos através do website https://dados.gov.pt/pt/"
+    "#### Neste Projeto é feito o ETL para tratamento e limpeza dos dados, essas etapas são fundamentais para garantir qualidade, confiabilidade e utilidade do dataset para análises exploratórias. \n",
+    "#### Dataset: 'Indice_Demografico_1900_a_2023.csv'\n",
+    "#### Os dados foram retirados de um repositório público através do website https://dados.gov.pt/pt/"
    ]
   },
   {
@@ -32,7 +34,7 @@
    "id": "8b2c1433",
    "metadata": {},
    "source": [
-    "#### Ao abrir o Arquivo, temos uma mensagem de erro, a seguir corrigimos isso"
+    "#### Ao abrir o dataset, retorna uma mensagem de erro, a seguir isso é corrigido"
    ]
   },
   {
@@ -73,12 +75,12 @@
    "id": "d60ed98d",
    "metadata": {},
    "source": [
-    "####  O Arquivo dá erro na hora de abrir, pois estamos a utilizar dados em português, desta forma, é utilizado encoding='latin1' para corrigir o erro."
+    "####  O dataset dá erro na hora de abrir, pois estamos a utilizar dados em português, desta forma, é utilizado encoding='latin1' para corrigir o erro."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5983ff6d",
    "metadata": {},
    "outputs": [
@@ -240,7 +242,7 @@
     }
    ],
    "source": [
-    "# Carregar o arquivo CSV com separador ponto e vírgula, codificação latin1\n",
+    "# Carrega o arquivo CSV com separador ponto e vírgula, codificação latin1\n",
     "df=pd.read_csv('Indice_Demografico_1900_a_2023.csv', sep = ';', encoding='latin1')\n",
     "df.head()"
    ]
@@ -250,12 +252,12 @@
    "id": "7f06f505",
    "metadata": {},
    "source": [
-    "####  O argumento skiprows=2 será aplicado no codigo anterior para que as duas primeiras linhas do arquivo sejam ignoradas na leitura, para uma melhor organização dos dados."
+    "####  O argumento skiprows=2 é aplicado no codigo anterior para que as duas primeiras linhas do arquivo sejam ignoradas na leitura, para a organização dos dados."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "952724a2",
    "metadata": {},
    "outputs": [
@@ -410,8 +412,7 @@
     }
    ],
    "source": [
-    "# Adiciono o skiprows=2 para ignorar as duas primeiras linhas do arquivo\n",
-    "#  que não são necessárias para a análise dos dados.\n",
+    "# É adicionado o skiprows=2 para ignorar as duas primeiras linhas do arquivo que não são necessárias\n",
     "df=pd.read_csv('Indice_Demografico_1900_a_2023.csv', sep = ';', encoding='latin1', skiprows=2)\n",
     "df.head()"
    ]
@@ -626,7 +627,7 @@
    "id": "190cd9bd",
    "metadata": {},
    "source": [
-    "#### Será apagado a coluna 'Unnamed: 1', 'Unnamed: 9', 'Unnamed: 10', 'Unnamed: 11', pois não acrescentam dados para a analise"
+    "#### São eliminadas as colunas 'Unnamed: 1', 'Unnamed: 9', 'Unnamed: 10', 'Unnamed: 11', pois não tem utilidade para o dataset."
    ]
   },
   {
@@ -764,7 +765,7 @@
    "id": "40c800e9",
    "metadata": {},
    "source": [
-    "#### Será apagado a linha 0, pois não é necessaria para o dataset, já que os índices foram renomeados"
+    "#### A linha 0 é eliminada, pois não é necessaria para o dataset, já que os índices foram renomeados"
    ]
   },
   {
@@ -1112,7 +1113,7 @@
    "id": "f8afd487",
    "metadata": {},
    "source": [
-    "#### Verificar as linhas duplicadas:\n"
+    "#### Verificar qais são as linhas duplicadas:\n"
    ]
   },
   {
@@ -1146,7 +1147,7 @@
    "id": "80578820",
    "metadata": {},
    "source": [
-    "#### É preciso transformar não numéricos, células vazias, com caracteres especiais, nulas em NaN"
+    "#### É preciso transformar dados não numéricos, células vazias ou com caracteres especiais, nulas em NaN"
    ]
   },
   {
@@ -1451,7 +1452,7 @@
    "id": "ca8c12dd",
    "metadata": {},
    "source": [
-    "#### Verificar se os valores estão tudo ok"
+    "#### Verificar se os valores estão consistentes"
    ]
   },
   {
@@ -1717,7 +1718,7 @@
    "id": "9f2015cb",
    "metadata": {},
    "source": [
-    "#### Os valores das colunas 'Populacao Residente Total', 'Populacao Homem', 'Populacao Mulheres' estão com espaçamento, é preciso removê-los"
+    "#### Os valores das colunas 'Populacao Residente Total', 'Populacao Homem', 'Populacao Mulheres' estão com espaçamento, é preciso removê-los para transformá-los em valores numéricos inteiros"
    ]
   },
   {
@@ -1905,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "58f5d68d",
    "metadata": {},
    "outputs": [
@@ -1926,7 +1927,7 @@
     "change_var_int = ['Anos', 'Populacao Residente Total', 'Populacao Homens', 'Populacao Mulheres']\n",
     "\n",
     "for col in change_var_int:\n",
-    "    esp_valor[col] = pd.to_numeric(esp_valor[col], errors='coerce').astype('Int64')  # converte para inteiro permitindo NaNs"
+    "    esp_valor[col] = pd.to_numeric(esp_valor[col], errors='coerce').astype('Int64')  # converte o valor para int permitindo NaNs"
    ]
   },
   {
@@ -2224,12 +2225,12 @@
    "id": "edb6cead",
    "metadata": {},
    "source": [
-    "#### É preciso modificar tipo de variaveis das colunas restantes de object pra float"
+    "#### É preciso modificar tipo de variaveis das colunas restantes de object pra float, retirar espaços entre os dados e mudar valores separados por virgula em ponto"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "eafc8212",
    "metadata": {},
    "outputs": [
@@ -2292,7 +2293,7 @@
     "# Seleciono colunas restantes do tipo object para converter em float\n",
     "colunas_para_float = [col for col in esp_valor.columns if col not in change_var_int and esp_valor[col].dtype == 'object']\n",
     "\n",
-    "# Converte colunas restantes para float com tratamento para espaços e valores inválidos\n",
+    "# Converte colunas restantes para float com tratamento para espaços e valores inválidos, modificando virgula para ponto\n",
     "for col in colunas_para_float:\n",
     "    esp_valor[col] = esp_valor[col].astype(str).str.replace(' ', '').str.replace(',', '.')\n",
     "    esp_valor[col] = pd.to_numeric(esp_valor[col], errors='coerce').astype('float64')"
@@ -2335,7 +2336,7 @@
    "id": "c7d78a00",
    "metadata": {},
    "source": [
-    "#### Após completar o ETL verificar os dados do dataframe e adicionar na variavel final"
+    "#### Após completar o ETL verificar os dados do dataset e adicionar a variavel final"
    ]
   },
   {
@@ -2643,7 +2644,7 @@
    "id": "184b4f3e",
    "metadata": {},
    "source": [
-    "#### Feito o ETL, foram retirados dados inconsistentes, linhas e colunas que não tem utilidade para a analise, trazendo confiabilidade e consistencia dos dados explorados. Os dados foram organizados em variáveis numéricas para que possa ser feito a Analise Exploratória estatistica. O dataset é salvo em um novo arquivo em CSV."
+    "#### Ao finalizar o ETL, o dataset é renomeado e salvo em um novo arquivo 'ETL_Indice_Demografico_1900_a_2023.csv'."
    ]
   },
   {
