Revisão na descrição
Alteração de erros

--- a/ETL-Indice_Demografico_1900_a_2023.ipynb
+++ b/ETL-Indice_Demografico_1900_a_2023.ipynb
@@ -1113,7 +1113,7 @@
    "id": "f8afd487",
    "metadata": {},
    "source": [
-    "#### Verificar qais são as linhas duplicadas:\n"
+    "#### É preciso Verificar quais são as linhas duplicadas:\n"
    ]
   },
   {
